# extensible-homework-helper

./: README.md  config.yaml  justfile  pyproject.toml
src/ehh/: __init__.py  cli_api.py  repl.py  tasks.py  tasks_api.py  telegram_bot.py
src/ehh/models/: ai_client.py  homework_kind.py  homework_record.py  homework_status.py  school_info.py  token.py  user_info.py
src/ehh/models/adapters/: base.py  utils.py
src/ehh/models/adapters/impl/: easy_exercise_adapter.py  easy_exercise_api_adapter.py
src/ehh/models/mixins/: base.py
src/ehh/models/mixins/impl/: audio_transcription_mixin.py
src/ehh/utils/: child_of.py  config.py  constants.py  feature_flags.py  importing.py  logging.py  prompt.py
src/ehh/utils/context/impl/: console_messenger.py
