[project]
name = "ehh"
version = "0.0.1"
authors = [{ name = "Fey Xie", email = "feyxiexzf@gmail.com" }]
description = "Utility for any homework platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "munch",
    "openai",
    "json5",
    "pyyaml",
    "semver",
    "httpx",
    "httpx[socks]",
    "platformdirs",
    "prompt_toolkit>=3,<4",
    "rich>=14,<15",
    "beautifulsoup4",
]

[project.optional-dependencies]
cli-browser = ["selenium>=4,<5"]
tui = ["textual>=6,<7"]
dev = ["textual-dev"]
tg-bot = ["python-telegram-bot"]
transcription = ["openai-whisper"]
clipboard = ["pyperclip"]

[project.urls]
Homepage = "https://github.com/Ujhhgtg/extensible-homework-helper"
Issues = "https://github.com/Ujhhgtg/extensible-homework-helper/issues"

[project.entry-points.ehh.adapters]
easy_excercise_api = "ehh.adapters.impl.easy_exercise_api_adapter:EasyExcerciseApiAdapter"
easy_excercise_browser = "ehh.adapters.impl.easy_exercise_browser_adapter:EasyExcerciseBrowserAdapter"

[project.entry-points.ehh.mixins]
audio_transcription = "ehh.mixins.impl.audio_transcription_mixin:AudioTranscriptionMixin"
ai_answer_generation = "ehh.mixins.impl.ai_answer_generation_mixin:AIAnswerGenerationMixin"
